<resources>
    <string name="interstitialAdReviewCoffee_id">ca-app-pub-4644948724078988/6044783539</string>
    <string name="interstitialAdCreateProduct_id">ca-app-pub-4644948724078988/2920970328</string>
    <string name="testInterstitialAd_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="app_name">Mochameter</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_evaluations">My evaluations</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_scan">Scan code</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error">error</string>


    <string name="banner_scan_id">ca-app-pub-4644948724078988/1547766212</string>
    <string name="banner_main_id">ca-app-pub-4644948724078988/8718762928</string>
    <string name="banner_scan_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="not_found_register">Product not found.\nTap here to register it.</string>
    <string name="acidity">Acidity</string>
    <string name="aroma">Aroma</string>
    <string name="body">Body</string>
    <string name="aftertaste">Aftertaste</string>
    <string name="score">Score</string>
    <string name="review_this_coffee">Review this coffee</string>
    <string name="send_review">Send review</string>
    <string name="no_reviews">This coffee has not any reviews.\nBe the first one to review it!</string>
    <string name="sort_by">Sort by</string>
    <string name="reverse">Reverse</string>
    <string name="soon">Coming soon</string>
    <string name="reviewCoffee">Review coffee</string>
    <string name="coffeeDetail">Coffee detail</string>
    <string name="coffeeFilterName">Coffee name or brand</string>
    <string name="scan_the_barcode_of_the_coffee">Scan the barcode of the coffee</string>
    <string name="thatBad">It can\'t be that bad... :)</string>
    <string name="minimun_5char">Minimun lenght 3 characters</string>
    <string name="img_mandatory">The coffee photo is mandatory</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_name">Product name</string>
    <string name="save">Save</string>
    <string name="error_creating_coffee">Error creating coffee</string>
    <string name="be_responsible">Please, be responsible with the content you share. Inappropriate conduct can result in banning your user.</string>
    <string name="not_classified_coffee">Product not classified as coffee. Tap here to add it to the category coffees</string>
    <string name="barcode">Barcode</string>
    <string name="verify_barcode">Verify that the barcode matches the one on the coffee you scanned. If they don\'t match, scan it again. Ignore leading zeros</string>
    <string name="footer_ranking">If you can\'t find your coffee it means it hasn\'t been reviewed yet. Be the first one scanning its barcode!</string>
    <string name="register_coffee">Register coffee</string>
    <string name="you_have_been_banned_for_creating_inappropriate_products">You have been banned for creating inappropriate products.</string>
    <string name="add_category">Add category</string>
    <string name="you_are_going_to_add_this_product_to_the_category_coffees">You are going to add this product to the category coffees.</string>
    <string name="review_sent">Review sent!</string>
    <string name="acidity_help">Acidity is a primary coffee flavor sensation that is perceived as a pleasing sharpness toward the front of the mouth, a numbing sensation on the tip of the tongue, or a dryness at the back of the palate and/or under the edges of the tongue.</string>
    <string name="aroma_help">Aroma is the smell of coffee. It is responsible for many of the flavor attributes not directly perceived by the tongue (which are sweet, salt, bitter, sour and umami). There are over 800 known aromatics in coffee with new ones being discovered regularly thanks to advances in testing equipment.</string>
    <string name="body_help">It is a feeling of heaviness and of some sort of “strength” that we can discern with coffee in the mouth, especially by pressing the tongue against the palate. The definition of “body” is used to indicate the structure of the drink and corresponds to a certain coffee consistency felt on the palate.</string>
    <string name="aftertaste_help">Aftertaste refers to the tastes and aromas left in the mouth after swallowing. Compared to other drinks, coffee flavours hang around for a long time.</string>
    <string name="score_help">Final score that you think this cafe has. Remember that taste is something personal.</string>
    <string name="camera_needed">Camera permission needed. Check app permissions</string>
</resources>