<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCoffeeCategory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivCoffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:maxHeight="300dp"
            android:minHeight="200dp"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="tvNameasdasd"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/ivCoffee" />

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="tvBrand"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/you_are_going_to_add_this_product_to_the_category_coffees"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tvBrand" />

        <TextView
            android:id="@+id/tvBeResponsible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/be_responsible"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tvWarning"
            tools:layout_editor_absoluteX="10dp" />

        <Button
            android:id="@+id/btnSendCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBeResponsible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>